=======
HISTORY
=======

1.1.2dev (unreleased)
------------------


1.1.1 (2010-07-25)
------------------

- Add styling to set the fontsize for Plone3 only. This fixes
  http://dev.plone.org/plone/ticket/10683
  [jaroel]

- Assume TinyMCE as the site's default editor if none is set. This closes
  http://dev.plone.org/plone/ticket/10810.
  [jaroel]

- Use urllib.unquote. This closes http://dev.plone.org/plone/ticket/10807.
  [jaroel]

- Apply a workaround to fix the "Paste Text" dialog.
  [davisagli]

1.1 (2010-07-23)
----------------

- If we set a description within tinymce (which is written to the `alt`
  attribute of the image tag then) we want to keep that one as image caption.
  Added check for `alt` attribute in Products.TinyMCE.transforms.parser.
  [hpeteragitator]

- In Products.TinyMCE.transforms.parser, added `full_path = unquote(full_path)`
  to remove any encoded characters from path before doing the catalog query.
  [hpeteragitator]

- Make the wysiwyg_support macros fall back to the default editor if the
  current user has an editor preference that is no longer installed.
  Fixes http://dev.plone.org/plone/ticket/10753
  [davisagli]

- Fixed `#undefined` in style selection for lists. This closes
  http://dev.plone.org/plone/ticket/10684.
  [hannosch]

- Hide the non-functioning advanced table options. This closes
  http://dev.plone.org/plone/ticket/10535.
  [hannosch]

- Enhance Rob's default table style fix by specifying a proper title and
  avoiding the duplication of the default `plain` entry. This refs
  http://dev.plone.org/plone/ticket/10534.
  [hannosch]

- Removed redundant `Image list` from image dialog. This closes
  http://dev.plone.org/plone/ticket/10342.
  [hannosch]

- Adopted TinyMCE's build process to generate a minified version of the main
  JavaScript file.
  [hannosch]

- Changed css registration, so it doesn't cause an extra CSS download, but is
  merged with the other anonymous CSS files.
  [hannosch]
