@@ -5,6 +5,9 @@ HISTORY
 1.1.2dev (unreleased)
 ------------------
 
+- Fix regression that broke the resolveuid transform if an `alt` attribute
+  was provided.
+  [davisagli]
 
 1.1.1 (2010-07-25)
 ------------------
